<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_spacing_small"
            android:layout_marginEnd="@dimen/bmi_spacing_small"
            tools:context=".main.MainActivity"
    >
        <ImageView
                android:id="@+id/main_image"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/bmi_main_img_height"
                android:contentDescription="@string/bmi_main_img_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/asterix_obelix"
        />
        <TextView
                android:id="@+id/mass_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bmi_spacing_small"
                android:layout_marginEnd="@dimen/bmi_spacing_small"
                android:layout_marginStart="@dimen/bmi_spacing_small"
                android:text="@string/bmi_main_mass_kg"
                app:layout_constraintTop_toBottomOf="@+id/main_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                style="@style/SecondaryText"
        />
        <EditText
                android:id="@+id/mass_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bmi_spacing_small"
                android:layout_marginEnd="@dimen/bmi_spacing_small"
                android:layout_marginTop="@dimen/bmi_spacing_small"
                android:inputType="number"
                android:ems="10"
                android:textSize="@dimen/bmi_font_large"
                android:maxLength="3"
                app:layout_constraintTop_toBottomOf="@+id/mass_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />
        <TextView
                android:id="@+id/height_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bmi_spacing_small"
                android:layout_marginStart="@dimen/bmi_spacing_small"
                android:layout_marginEnd="@dimen/bmi_spacing_small"
                android:text="@string/bmi_main_height_cm"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mass_edit"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/SecondaryText"
        />
        <TextView
                android:id="@+id/height_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bmi_spacing_small"
                android:layout_marginEnd="@dimen/bmi_spacing_small"
                android:text="@string/bmi_main_height_in"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/height_in_edit"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/mass_edit"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/SecondaryText"
        />
        <EditText
                android:id="@+id/height_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bmi_spacing_small"
                android:layout_marginStart="@dimen/bmi_spacing_small"
                android:layout_marginEnd="@dimen/bmi_spacing_small"
                android:inputType="number"
                android:ems="10"
                android:textSize="@dimen/bmi_font_large"
                android:maxLength="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/height_in_edit"
                app:layout_constraintTop_toBottomOf="@+id/height_text"
        />
        <EditText
                android:id="@+id/height_in_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bmi_spacing_small"
                android:layout_marginTop="@dimen/bmi_spacing_small"
                android:layout_marginEnd="@dimen/bmi_spacing_small"
                android:inputType="number"
                android:ems="10"
                android:maxLength="2"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/height_text"
                app:layout_constraintStart_toEndOf="@+id/height_edit"
        />
        <TextView
                android:id="@+id/bmi_result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bmi_spacing_small"
                android:layout_marginStart="@dimen/bmi_spacing_small"
                android:layout_marginEnd="@dimen/bmi_spacing_small"
                android:textSize="@dimen/bmi_font_huge"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/height_edit"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
                android:id="@+id/bmi_category_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/bmi_spacing_small"
                android:layout_marginStart="@dimen/bmi_spacing_small"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/bmi_font_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bmi_result_text"
        />
        <Button
                android:id="@+id/calculate_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/bmi_spacing_small"
                android:layout_marginStart="@dimen/bmi_spacing_small"
                android:layout_marginTop="@dimen/bmi_spacing_small"
                android:layout_marginBottom="@dimen/bmi_spacing_small"
                android:text="@string/bmi_main_calculate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bmi_category_text"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Button"
        />
        <ImageButton
                android:id="@+id/info_button"
                android:layout_width="@dimen/bmi_circular_button_normal"
                android:layout_height="@dimen/bmi_circular_button_normal"
                android:layout_marginTop="@dimen/bmi_spacing_small"
                android:layout_marginEnd="@dimen/bmi_spacing_small"
                android:layout_marginStart="@dimen/bmi_spacing_small"
                android:scaleType="fitCenter"
                android:background="@drawable/circular_button_background"
                android:contentDescription="@string/bmi_about_info_button_img_description"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_arrow_forward"
                app:layout_constraintBottom_toBottomOf="@+id/bmi_category_text"
                app:layout_constraintTop_toTopOf="@+id/bmi_result_text"
                app:layout_constraintStart_toEndOf="@+id/bmi_result_text"
                app:layout_constraintHorizontal_bias="0.15"
        />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
