...

    <string name="bmi_main_empty_input_error">This field cannot be empty.</string>
    <string name="bmi_main_zero_input_error">This field cannot be equal to 0.</string>

    <!--  Menu  -->
    <string name="bmi_menu_open_history">History</string>
    <string name="bmi_menu_switch_to_imperial_units">Switch to imperial units</string>
    <string name="bmi_menu_switch_to_metric_units">Switch to metric units</string>

    <!--    About Activity-->
    <string name="bmi_about_action_bar_title">About me</string>
    <string name="bmi_about_about_me">About me</string>
    <string name="bmi_about_paul_img_description">Myself</string>
...
